Text Wrapping Fix

--- a/public/app/app/styles/main.css
+++ b/public/app/app/styles/main.css
@@ -7445,7 +7445,6 @@ pre {
   color: inherit;
   background-color: #FFFFFF;
   border: none;
-  word-wrap: normal;
   padding: 0;
   padding-left: 27px;
 }
